# resetmsmice

./: AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  build-deb.sh  build-rpm.sh  conf.h  conf.h.in  configure  configure.ac  functions.txt  gui.c.old  gui.cc  gui.cc.gtkmm.notused  hid-userland.h  main.c  parse.c  resetmsmice-enable-boot  resetmsmice-enable-boot.sh  resetmsmice-fedora.spec  resetmsmice-redhat.spec  resetmsmice.desktop  resetmsmice.glade  resetmsmice.gladep  resetmsmice.pro  resetmsmice.ui
_build/: Makefile  conf.h  config.status  resetmsmice-gui  stamp-h1
_build/.deps/: main.Po  parse.Po  resetmsmice_gui-gui.Po
_inst/sbin/: resetmsmice-enable-boot
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
data/: 60-resetmsmice.rules  Info.plist  com.github.paulrichards321.resetmsmice-gui.policy  mouse.icns  resetmsmice-cmd.desktop  resetmsmice.desktop  resetmsmice.icns
debian/: autoreconf.after  autoreconf.before  changelog  changelog.debian  control  copyright  debhelper-build-stamp  docs  files  postinst  postinst.debian  prerm  resetmsmice.install  resetmsmice.postinst.debhelper  resetmsmice.preinst.debhelper  resetmsmice.substvars  rules  rules.old
include/: basictypes.h  hid-userland.h  pthread-misc.h  resetmsmice.h
include/gtk3/: execSave.h  resetWindow.h
include/qt5/: eventLoopProcess.h  execSave.h  resetWindow.h  resetWindow.ui  terminalView.h
linux/: postinstall
macos/: resetmsmice-enable-boot
optional-kernel-patch/: msresetmouse-3.3.0.patch
scripts/: resetmsmice-enable-boot-linux  resetmsmice-enable-boot-macosx
src/: main.c  parse.c  pthread-misc.c  resetmsmice.c  src.pro
src/gtk3/: execSave.cc  resetWindow.cc
src/qt5/: .#resetWindow.cc  eventLoopProcess.cc  execSave.cc  main.cc  moc_predefs.h  qt5.pro  resetWindow.cc  terminalView.cc
